--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,10 @@ body, html {
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow-y: auto;
+}
+
+.home {
+  overflow: hidden;
 }
 
 .background-main {
@@ -59,6 +62,7 @@ h1 {
   margin-top: 50px;
   margin-bottom: 5px;
   color: white;
+  font-weight: 2000;
 }
 
 h2 {
@@ -147,6 +151,7 @@ span {
   transition: left 0.5s ease;
   opacity: 0;
   pointer-events: none;
+  overflow-y: auto;
 }
 
 .section.active {
@@ -179,9 +184,72 @@ span {
 
 .sobre-mim {
   background-color: rgba(0, 0, 0, 0.904);
-  width: 90vw;
+  width: 90%;
   height: 80vh;
-  margin: 5vw;
+  margin: 5%;
+}
+
+.nav-bar2 {
+  background-color: #000;
+  padding: 10px;
+}
+
+.nav-bar2 ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-bar2 ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.nav-bar2 a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.section {
+  color: #000;
+  padding: 20px;
+}
+
+h2 {
+  color: #ffffff;
+  text-align: center;
+}
+
+.info {
+  background-color: #000000c9;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.info img {
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 500px;
+  margin-right: 20px;
+}
+
+.detalhes {
+  max-width: 600px;
+}
+
+.detalhes ul {
+  list-style: none;
+  padding: 0;
+}
+
+.detalhes ul li {
+  margin: 5px 0;
+}
+
+.detalhes p {
+  margin-top: 10px;
 }
 
 .nav-bar2 ul {
@@ -189,17 +257,20 @@ span {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .nav-bar2 ul, .nav-bar2 li {
-  left: 0;
   margin-right: 10px;
   margin-top: 10px;
   cursor: pointer;
 }
 
 .nav-bar2 a {
-  color: #a5a5a5;
+  font-weight: 500;
+  margin-right: 10px;
+  color: #ffffff;
   text-decoration: none;
   position: relative;
 }
@@ -219,4 +290,17 @@ span {
 
 .nav-bar2 a:hover::after {
   transform: scaleX(1);
+}
+
+#dynamic-text {
+  display: inline;
+  border-right: 2px solid rgba(255, 255, 255, 0.75);
+  white-space: nowrap;
+  overflow: hidden;
+  animation: blink-caret 0.75s step-end infinite;
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: rgba(255, 255, 255, 0.75); }
 }
