--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 body, html {
   margin: 0;
   padding: 0;
-  height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
   font-family: 'Outfit', sans-serif;
+}
+
+img, video {
+  max-width: 100%;
 }
 
 .menu {
@@ -23,10 +32,6 @@ body, html {
   position: relative;
   width: 100%;
   height: 100vh;
-}
-
-.home {
-  overflow: hidden;
 }
 
 .background-main {
@@ -151,7 +156,6 @@ span {
   transition: left 0.5s ease;
   opacity: 0;
   pointer-events: none;
-  overflow-y: auto;
 }
 
 .section.active {
@@ -215,6 +219,16 @@ span {
   padding: 20px;
 }
 
+section {
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
+#home {
+  overflow: hidden;
+}
+
 h2 {
   color: #ffffff;
   text-align: center;
@@ -226,13 +240,20 @@ h2 {
   display: flex;
   align-items: center;
   margin-top: 20px;
+  overflow: hidden;
 }
 
 .info img {
-  margin-left: 20px;
-  margin-top: 20px;
+  top: 0 auto;
+  float: left;
+  padding: 40px;
   width: 500px;
-  margin-right: 20px;
+  height: 500px;
+}
+
+.info span {
+  text-decoration: none;
+  text-align: start;
 }
 
 .detalhes {
@@ -240,12 +261,16 @@ h2 {
 }
 
 .detalhes ul {
-  list-style: none;
+  font-style: normal;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
   padding: 0;
 }
 
-.detalhes ul li {
-  margin: 5px 0;
+.detalhes li {
+  flex: 0 0 50%;
+  box-sizing: border-box;
 }
 
 .detalhes p {
@@ -303,4 +328,46 @@ h2 {
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: rgba(255, 255, 255, 0.75); }
+}
+
+.dados {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+  gap: 10px;
+}
+
+.dados .card {
+  width: 200px;
+  height: 10px auto;
+}
+
+.card {
+  background-color: #2b2b2b8f;
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  width: 20%;
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+.icon {
+  font-size: 40px;
+  color: #3498db;
+  margin-bottom: 10px;
+}
+
+.info h3 {
+  font-size: 36px;
+  margin-top: 10px 0;
+}
+
+.info p {
+  font-size: 18px;
+  color: #c5c9d6;
 }
