--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ span {
   width: 100vw;
   height: 100vh;
   left: -100%;
-  transition: left 0.5s ease;
+  transition: left 0.6s ease-in-out;
   opacity: 0;
   pointer-events: none;
 }
@@ -240,7 +240,7 @@ h2 {
   display: flex;
   align-items: center;
   margin-top: 20px;
-  overflow: hidden;
+  margin: 5%;
 }
 
 .info img {
@@ -257,7 +257,7 @@ h2 {
 }
 
 .detalhes {
-  max-width: 600px;
+  max-width: 70%;
 }
 
 .detalhes ul {
@@ -334,7 +334,7 @@ h2 {
   display: flex;
   justify-content: space-around;
   margin-bottom: 30px;
-  gap: 10px;
+  max-width: auto;
 }
 
 .dados .card {
@@ -350,6 +350,7 @@ h2 {
   color: white;
   width: 20%;
   transition: transform 0.3s;
+  overflow: hidden
 }
 
 .card:hover {
@@ -370,4 +371,9 @@ h2 {
 .info p {
   font-size: 18px;
   color: #c5c9d6;
+}
+
+
+.titles { 
+  margin-left: 0;
 }
